--- a/Store_core/Properties/launchSettings.json
+++ b/Store_core/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true, 
     "iisExpress": {
       "applicationUrl": "http://localhost:44683",
-      "sslPort": 44367
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -18,7 +18,7 @@
     "Store_core": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
