--- a/Store_core/appsettings.json
+++ b/Store_core/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-NHTJ6TA\\SQLEXPRESS;Database=storedb;Trusted_Connection=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +10,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
   "AllowedHosts": "*"
 }
